--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -23,14 +23,16 @@
     "@angular/platform-browser-dynamic": "^14.1.3",
     "@angular/platform-server": "^14.1.3",
     "@angular/router": "^14.1.3",
+    "ajv": "^8.12.0",
+    "angular-google-charts": "^2.2.3",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
     "rxjs": "~7.5.6",
-    "tslib": "^2.4.0",
-    "zone.js": "~0.11.8"
+    "tslib": "^2.5.0",
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.3",
@@ -49,6 +51,5 @@
   },
   "overrides": {
     "autoprefixer": "10.4.5"
-  },
-  "optionalDependencies": {}
+  }
 }
